# acCL

./: .gitignore  CMakeLists.txt  README.md
include/: Context.h  Device.h  acCL.h  pch.h
src/: Context.cpp  Device.cpp  acCL.cpp
test/include/: Context_test.h  Device_test.h  test_pch.h  unit_tests.h
test/src/: Context_test.cpp  Device_test.cpp  test_main.cpp
